# tnarg_rules_cue

./: BUILD.bazel  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
cue/: cue.bzl  deps.bzl
examples/module/cue.mod/: module.cue
examples/module/deploy/: BUILD.bazel  region.cue
examples/module/deploy/cluster/: BUILD.bazel  cluster.cue
gazelle/cue/: BUILD.bazel  config.go  config_test.go  fileinfo.go  fileinfo_cue_test.go  fileinfo_test.go  generate.go  generate_test.go  kinds.go  lang.go  lang_test.go  package.go
gazelle/cue/testdata/module/cue.mod/: module.cue
gazelle/cue/testdata/simple/: BUILD.want  simple.cue
tools/cmd/replace-stamps/: BUILD.bazel
