load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cue",
    srcs = [
        "config.go",
        "fileinfo.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "package.go",
    ],
    importpath = "github.com/seh/rules_cue/gazelle/cue",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//flag:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//pathtools:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@org_cuelang_go//cue/ast",
        "@org_cuelang_go//cue/parser",
    ],
)

go_test(
    name = "cue_test",
    srcs = [
        "config_test.go",
        "fileinfo_cue_test.go",
        "fileinfo_test.go",
        "generate_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":cue"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//merger:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@bazel_gazelle//testtools:go_default_library",
        "@bazel_gazelle//walk:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_google_go_cmp//cmp",
    ],
)
