load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:exclude testdata

go_library(
    name = "cue",
    srcs = [
        "config.go",
        "fileinfo.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "package.go",
    ],
    importpath = "github.com/yujunz/rules_cue/gazelle/cue",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//flag:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//pathtools:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@org_cuelang_go//cue/ast",
        "@org_cuelang_go//cue/parser",
    ],
)

go_test(
    name = "cue_test",
    srcs = [
        "config_test.go",
        "fileinfo_cue_test.go",
        "fileinfo_test.go",
        "generate_test.go",
        "lang_test.go",
    ],
    data = [
        ":gazelle-cue",
    ] + glob([
        "testdata/**",
    ]),
    embed = [":cue"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//merger:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@bazel_gazelle//testtools:go_default_library",
        "@bazel_gazelle//walk:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

# This gazelle binary is used exclusively for testing the gazelle language
# extension and thus only has the cue language installed.
gazelle_binary(
    name = "gazelle-cue",
    languages = [":cue"],
    visibility = [
        # Also make the binary available in the root of the repo for use, but
        # not externally.
        "//:__pkg__",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-cue",
)
